fix visibility

--- a/stylesheets/hero.css
+++ b/stylesheets/hero.css
@@ -6,6 +6,7 @@
     padding: 30px 0;
     align-items: center;
     justify-items: center;
+    z-index: 1;
   }
   
   .hero h1 {
