--- a/stylesheets/navBar.css
+++ b/stylesheets/navBar.css
@@ -71,7 +71,7 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       transition: right 0.3s ease;
-      z-index: 100;
+      z-index: 105;
       overflow-y: auto;
       color: var(--gray);
     }
@@ -118,7 +118,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 99;
+    z-index: 101;
   }
   
   .menu-overlay.active {
